--- a/angular/projects/onboarding/src/index.html
+++ b/angular/projects/onboarding/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <onboarding-root></onboarding-root>
 </body>
 </html>
